add missing type field for lambda function

--- a/cloudformation/Prowler-Template.yaml
+++ b/cloudformation/Prowler-Template.yaml
@@ -616,6 +616,7 @@ Resources:
             Effect: Allow
 
   DecorateFindingsFunction:
+    Type: AWS::Serverless::Function
     Properties:
       FunctionName: !Sub "${AWS::StackName}-decorator"
       Description: Decorate prowler findings with additional tracking data from DDB
