Decorator Lambda and Tracking Table (#3)
* added dynamodb table

* add decorator lambda infrastructure (sqs, lambda role, alarms)

* add missing type field for lambda function

* fix role and sqs visibility time

* fix lambda role to allow batch write and query to indices and fix ddb schema to use top level attributes

* added lambda function code to decorate file via DDB

* remove erroring log statement

* remove unmapped from finding written to ddb

* add SNS topic for processed prowler output

* add backfill script

--- a/cloudformation/Prowler-Template.yaml
+++ b/cloudformation/Prowler-Template.yaml
@@ -22,6 +22,10 @@ Parameters:
     Description: Name of the bucket to hold the prowler results
     Type: String
 
+  pTableName:
+    Description: Name of the DDB table to track the prowler results
+    Type: String
+
   pAuditRoleName:
     Description: Default name of the AssumeRole to assume into accounts
     Type: String
@@ -147,7 +151,9 @@ Resources:
   ProwlerBucket:
     Type: AWS::S3::Bucket
     DeletionPolicy: RetainExceptOnCreate
-    DependsOn: ProwlerBucketNotificationTopicPolicy
+    DependsOn: 
+      - ProwlerBucketNotificationTopicPolicy
+      - ProwlerBucketProcessedFindingsNotificationTopicPolicy
     Properties:
       # AccessControl: Private
       BucketEncryption:
@@ -167,6 +173,15 @@ Resources:
                 Rules:
                   - Name: prefix
                     Value: "prowler4-output/json-ocsf/"
+                  - Name: suffix
+                    Value: ".json"
+          - Event: 's3:ObjectCreated:*'
+            Topic: !Ref ProcessedAWSFindingsNotificationTopic
+            Filter:
+              S3Key:
+                Rules:
+                  - Name: prefix
+                    Value: "prowler4-output/json-ocsf-processed/"
                   - Name: suffix
                     Value: ".json"
           - Event: 's3:ObjectCreated:*'
@@ -205,7 +220,7 @@ Resources:
         - Sid: AllowProwlerBucketPublish
           Effect: Allow
           Principal:
-            AWS: "*"
+            Service: "s3.amazonaws.com"
           Action:
           - SNS:Publish
           Resource:
@@ -216,6 +231,35 @@ Resources:
             StringEquals:
               aws:SourceAccount: !Ref AWS::AccountId
 
+  ProcessedAWSFindingsNotificationTopic:
+    Type: AWS::SNS::Topic
+    Properties:
+      DisplayName: !Sub "Destination of PutObject calls from ${pBucketName}/prowler4-output/json-ocsf-processed/"
+      TopicName: !Sub "${pBucketName}-AWS-Processed-S3Events"
+
+  ProwlerBucketProcessedFindingsNotificationTopicPolicy:
+    Type: AWS::SNS::TopicPolicy
+    Properties:
+      Topics:
+        - !Ref ProcessedAWSFindingsNotificationTopic
+      PolicyDocument:
+        Version: '2012-10-17'
+        Id: AllowProwlerBucket
+        Statement:
+        - Sid: AllowProwlerBucketPublish
+          Effect: Allow
+          Principal:
+            Service: "s3.amazonaws.com"
+          Action:
+          - SNS:Publish
+          Resource:
+          - !Ref ProcessedAWSFindingsNotificationTopic
+          Condition:
+            ArnLike:
+              aws:SourceArn: !Sub "arn:aws:s3:*:*:${pBucketName}"
+            StringEquals:
+              aws:SourceAccount: !Ref AWS::AccountId
+  
   GCPOutputNotificationTopic:
     Type: AWS::SNS::Topic
     Properties:
@@ -234,7 +278,7 @@ Resources:
         - Sid: AllowProwlerBucketPublish
           Effect: Allow
           Principal:
-            AWS: "*"
+            Service: "s3.amazonaws.com"
           Action:
           - SNS:Publish
           Resource:
@@ -555,6 +599,156 @@ Resources:
         Variables:
           FINDING_QUEUE_URL: !Ref FindingIngestEventQueue
 
+  DecoratorLambdaRole:
+    Type: AWS::IAM::Role
+    Properties:
+      AssumeRolePolicyDocument:
+        Version: '2012-10-17'
+        Statement:
+        - Effect: Allow
+          Principal:
+            Service:
+            - lambda.amazonaws.com
+          Action:
+          - sts:AssumeRole
+      Path: /
+      Policies:
+      - PolicyName: S3Access
+        PolicyDocument:
+          Version: '2012-10-17'
+          Statement:
+          - Action:
+            - s3:PutObject
+            - s3:GetObject
+            Effect: Allow
+            Resource:
+              - !Sub 'arn:aws:s3:::${pBucketName}/*'
+              - !Sub 'arn:aws:s3:::${pBucketName}'
+      - PolicyName: LambdaLogging
+        PolicyDocument:
+          Version: '2012-10-17'
+          Statement:
+          - Resource: '*'
+            Action:
+            - logs:*
+            Effect: Allow
+      - PolicyName: GetMessages
+        PolicyDocument:
+          Version: '2012-10-17'
+          Statement:
+          - Resource:
+            - !GetAtt S3EventDecoratorQueue.Arn
+            Action:
+            - sqs:ReceiveMessage
+            - sqs:DeleteMessage
+            - sqs:GetQueueAttributes
+            Effect: Allow
+      - PolicyName: DDBFindingTracking
+        PolicyDocument:
+          Version: '2012-10-17'
+          Statement:
+          - Resource:
+            - !Sub "arn:aws:dynamodb:${AWS::Region}:${AWS::AccountId}:table/${ProwlerFindingsTrackingTable}"
+            - !Sub "arn:aws:dynamodb:${AWS::Region}:${AWS::AccountId}:table/${ProwlerFindingsTrackingTable}/index/*"
+            Action:
+            - dynamodb:Query
+            - dynamodb:PutItem
+            - dynamodb:BatchWriteItem
+            - dynamodb:UpdateItem
+            Effect: Allow
+
+  DecorateFindingsFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      FunctionName: !Sub "${AWS::StackName}-decorator"
+      Description: Decorate prowler findings with additional tracking data from DDB
+      Handler: decorate_prowler_findings.handler
+      Role: !GetAtt DecoratorLambdaRole.Arn
+      CodeUri: ../lambda
+      Timeout: 900
+      Events:
+        SQSIngest:
+          Type: SQS
+          Properties:
+            BatchSize: 1
+            Enabled: True
+            Queue: !GetAtt S3EventDecoratorQueue.Arn
+      Environment:
+        Variables:
+          TRACKING_TABLE_NAME: !Ref ProwlerFindingsTrackingTable
+          OUTPUT_BUCKET: !Ref ProwlerBucket
+
+  #
+  # Decorator S3 -> SNS -> SQS -> Lambda Plumbing
+  #
+  S3EventDecoratorQueue:
+    Type: AWS::SQS::Queue
+    Properties:
+      # Any messages older than an hour are probably out-of-date
+      MessageRetentionPeriod: 36000
+      ReceiveMessageWaitTimeSeconds: 10
+      VisibilityTimeout: 1050
+  
+  S3EventDecoratorQueueSubscription:
+    Type: AWS::SNS::Subscription
+    Properties:
+      Endpoint: !GetAtt S3EventDecoratorQueue.Arn
+      Protocol: sqs
+      TopicArn: !Ref OutputNotificationTopic # topic for "prowler4-output/json-ocsf/" events
+
+  S3EventDecoratorQueuePolicy:
+    Type: AWS::SQS::QueuePolicy
+    Properties:
+      Queues:
+        - !Ref S3EventDecoratorQueue
+      PolicyDocument:
+        Version: '2012-10-17'
+        Id: AllowS3
+        Statement:
+        - Sid: AllowS3EventNotification
+          Effect: Allow
+          Principal:
+            AWS: '*'
+          Action:
+          - SQS:SendMessage
+          Resource: !GetAtt S3EventDecoratorQueue.Arn
+          Condition:
+            ArnLike:
+              aws:SourceArn: !Sub "arn:aws:s3:*:*:${pBucketName}"
+        - Sid: Allow-SNS-SendMessage
+          Effect: Allow
+          Principal: "*"
+          Action:
+          - sqs:SendMessage
+          Resource: !GetAtt S3EventDecoratorQueue.Arn
+          Condition:
+            ArnEquals:
+              aws:SourceArn:
+                - !Ref OutputNotificationTopic
+  
+  S3EventDecoratorQueueAlarm:
+    Type: AWS::CloudWatch::Alarm
+    Properties:
+      ActionsEnabled: True
+      AlarmDescription: "Alert when decorator Queue doesn't properly drain"
+      AlarmName: !Sub "${AWS::StackName}-DecoratorFileProcessQueue"
+      ComparisonOperator: GreaterThanOrEqualToThreshold
+      Dimensions:
+        - Name: QueueName
+          Value: !GetAtt S3EventDecoratorQueue.QueueName
+      EvaluationPeriods: 1
+      MetricName: ApproximateNumberOfMessagesVisible
+      Namespace: AWS/SQS
+      Period: 300
+      Statistic: Average
+      Threshold: 3
+      TreatMissingData: missing
+      AlarmActions:
+        - !If
+          - cAlarmActions
+          - !Ref pAlertTopicArn
+          - !Ref AWS::NoValue
+
   #
   # S3 -> SNS -> SQS -> Lambda Plumbing
   #
@@ -676,6 +870,43 @@ Resources:
           - !Ref AWS::NoValue
 
   #
+  # DynamoDB resources
+  #
+  ProwlerFindingsTrackingTable:
+    Type: AWS::DynamoDB::Table
+    Properties:
+      TableName: !Ref pTableName
+      AttributeDefinitions:
+        - AttributeName: finding_info_uid
+          AttributeType: S
+        - AttributeName: cloud_account_uid
+          AttributeType: S
+        - AttributeName: metadata_event_code
+          AttributeType: S
+      KeySchema:
+        - AttributeName: finding_info_uid
+          KeyType: HASH
+      BillingMode: PAY_PER_REQUEST
+      GlobalSecondaryIndexes:
+        - IndexName: "CloudAccountIndex"
+          KeySchema:
+            - AttributeName: cloud_account_uid
+              KeyType: "HASH"
+            - AttributeName: metadata_event_code
+              KeyType: "RANGE"
+          Projection:
+            ProjectionType: "ALL"
+        - IndexName: "EventCodeIndex"
+          KeySchema:
+            - AttributeName: metadata_event_code
+              KeyType: "HASH"
+          Projection:
+            ProjectionType: "ALL"
+      StreamSpecification:
+        StreamViewType: NEW_IMAGE
+    DeletionPolicy: RetainExceptOnCreate
+
+  #
   # Alarms
   #
   ImportProwlerFindingsFunctionErrorAlarm:
@@ -712,6 +943,28 @@ Resources:
       Dimensions:
       - Name: "FunctionName"
         Value: !Ref ProcessFindingsFileFunction
+      Statistic: "Sum"
+      ComparisonOperator: "GreaterThanThreshold"
+      Threshold: 0
+      EvaluationPeriods: 1
+      Period: 60
+      TreatMissingData: "ignore"
+      AlarmActions:
+        - !If
+          - cAlarmActions
+          - !Ref pAlertTopicArn
+          - !Ref AWS::NoValue
+
+  DecorateFindingsFunctionErrorAlarm:
+    Type: AWS::CloudWatch::Alarm
+    Properties:
+      AlarmName: !Sub ${DecorateFindingsFunction}-LambdaErrors
+      AlarmDescription: "Alarm if lambda errors out"
+      Namespace: "AWS/Lambda"
+      MetricName: "Errors"
+      Dimensions:
+      - Name: "FunctionName"
+        Value: !Ref DecorateFindingsFunction
       Statistic: "Sum"
       ComparisonOperator: "GreaterThanThreshold"
       Threshold: 0
@@ -816,6 +1069,9 @@ Outputs:
 
   ProwlerBucketEventTopicArn:
     Value: !Ref OutputNotificationTopic
+
+  ProwlerBucketProcessedEventTopicArn:
+    Value: !Ref ProcessedAWSFindingsNotificationTopic
 
   ProwlerBucketGCPEventTopicArn:
     Value: !Ref GCPOutputNotificationTopic
