only deploy alert lambda if slacksecret is not none

--- a/cloudformation/Prowler-Template.yaml
+++ b/cloudformation/Prowler-Template.yaml
@@ -131,6 +131,7 @@ Parameters:
 Conditions:
   cSlackSecret: !Not [!Equals [ !Ref pSlackSecret, "NONE" ]]
   cDeployIngestLambda: !Not [!Equals [ !Ref pDomainEndpoint, "NONE" ]]
+  cDeployAlertLambda: !Not [!Equals [ !Ref pSlackSecret, "NONE" ]]
   cAlarmActions: !Not [!Equals [ !Ref pAlertTopicArn, "NONE" ]]
 
 Globals:
@@ -681,6 +682,7 @@ Resources:
 
   FindingsAlertRole:
     Type: AWS::IAM::Role
+    Condition: cSlackSecret
     Properties:
       AssumeRolePolicyDocument:
         Version: '2012-10-17'
@@ -734,6 +736,7 @@ Resources:
 
   FindingsAlertFunction:
     Type: AWS::Serverless::Function
+    Condition: cSlackSecret
     Properties:
       FunctionName: !Sub "${AWS::StackName}-findings-alert"
       Description: Send alerts about new findings
@@ -749,6 +752,7 @@ Resources:
         - arn:aws:lambda:us-east-1:177933569100:layer:AWS-Parameters-and-Secrets-Lambda-Extension:11
 
   DynamoDBStreamToFindingsAlertLambda:
+    Condition: cSlackSecret
     Type: AWS::Lambda::EventSourceMapping
     Properties:
       StartingPosition: LATEST
@@ -828,6 +832,7 @@ Resources:
   
   FindingsAlertFunctionErrorAlarm:
     Type: AWS::CloudWatch::Alarm
+    Condition: cSlackSecret
     Properties:
       AlarmName: !Sub ${FindingsAlertFunction}-LambdaErrors
       AlarmDescription: "Alarm if lambda errors out"
